--- a/style.css
+++ b/style.css
@@ -1,19 +1,15 @@
-h1 {
+h1{
     font-family: 'Dancing Script', cursive;
 }
 
-/* banner */
 
-.carousel-item img{
-    max-width: 100%;
-    max-height: 90vh;
+.carousel-inner img{
+
+    width: 100%;
+    height: 90vh;
 }
 
-
-/* team */
-
-.card-body img{ 
-    min-width:50%;
+.card-body img{
+    min-width: 50%;
     max-height: 200px;
-    
 }
